feat: enhance SBOM export handling with localized messages and UI improvements; #152
- Improved `ExportProjectSbomHelperView` with better task handling, enhanced notifications, and streamlined UI updates.
- Refactored to replace hardcoded text with property-based messages.
- Enhanced logging, error handling, and task progress indicators.